resources/ej2-base/releasenotes/WindowsForms/Release-Notes/v14.4.0.20/DocIO.md
## DocIO

### Bug Fixes
{:#DocIO-bug-fixes}

* \#165843 - List number preservation issue has been resolved while importing a particular Word document.
* \#167934 - `TextFormField` is now preserved properly while replacing a bookmark contents.
* \#168028 - IndexOutOfRangeException will no longer thrown while opening a particular DOCX format document.
* \#167568, \#167582 - NullReferenceException will no longer thrown while opening a particular DOCX format document.
* \#167600 - ArgumentException will no longer thrown while opening a particular DOCX format document.
* \#167568 - File is no longer corrupted while resaving a particular DOCX format document.
* \#166885 - StackOverflowException will no longer thrown while updating document fields for a particular Word document.
* \#167189 - IndexOutofRangeException will no longer thrown while retrieving the bookmark content.
* \#167794, \#167934 - NullReferenceException will no longer thrown while replacing the bookmark contents.
* \#167798 - Frame preservation issue has been resolved while converting a particular DOC format document as PDF.
* \#167333 - Before spacing preservation issue has been resolved while converting a particular Word document as PDF.
* \#167138, \#167831 - No longer hangs while updating table of contents for a particular Word document.
* \#167333 - Textbox is now preserved properly while converting a particular Word document as PDF.
* \#166995 - Highlight color is now preserved properly for the justify aligned paragraph in Word to PDF conversion.
* \#167448 - NullReferenceException will no longer thrown while converting a particular Word document as PDF.
* \#167194 - Row splitting issue has been resolved while converting a particular Word document as PDF. 
* \#167838 - Table indent preservation issue has been resolved while converting a particular RTF format document as PDF.
* \#167805 - Text splitting issue has been resolved while converting a particular Word document as PDF.
* \#168028 - Page number is now preserved properly while updating table of contents for a particular Word document.
* \#167888 - Column break preservation issue has been resolved while converting a particular Word document as PDF. 
* \#167559 - No longer hangs while converting a particular Word document as PDF.
* \#167585 - Text splitting issue has been resolved while converting a particular Word document as PDF.